--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -18,13 +18,6 @@ jobs:
         with:
           python-version: '3.9'
 
-      # - name: Set up SSH Key
-      #   run: |
-      #     mkdir -p ~/.ssh   # Ensure .ssh directory exists
-      #     echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-      #     chmod 600 ~/.ssh/id_rsa
-
-
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
@@ -39,8 +32,8 @@ jobs:
 
       - name: Push Docker image to Docker Hub
         run: |
-          docker tag streamlit-app:latest tanvij18/streamlit-app:latest
-          docker push tanvij18/streamlit-app:latest
+          docker tag streamlit-app:latest ${{ secrets.DOCKER_USERNAME }}/streamlit-app:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/streamlit-app:latest
 
       - name: Set up SSH Key
         run: |
@@ -58,18 +51,84 @@ jobs:
         run: |
           echo "Attempting to pull and run Docker container..."
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@20.109.24.192 "
-            docker pull tanvij18/streamlit-app:latest &&
+            docker pull ${{ secrets.DOCKER_USERNAME }}/streamlit-app:latest &&
             docker stop streamlit-app || true &&
             docker rm streamlit-app || true &&
-            docker run -d --name streamlit-app -p 8501:8501 tanvij18/streamlit-app:latest"
+            docker run -d --name streamlit-app -p 8501:8501 ${{ secrets.DOCKER_USERNAME }}/streamlit-app:latest"
 
-      # - name: Pull and run Docker container on server
-      #   run: |
-      #     echo "Attempting to pull and run Docker container..."
-      #     ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@20.244.44.252 "
-      #       docker pull tanvij18/streamlit-app:latest &&
-      #       docker stop streamlit-app || true &&
-      #       docker rm streamlit-app || true &&
-      #       docker run -d --name streamlit-app -p 8501:8501 tanvij18/streamlit-app:latest"
+
+# name: CI/CD Pipeline
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Check out code
+#         uses: actions/checkout@v2
+
+#       - name: Set up Python
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: '3.9'
+
+#       # - name: Set up SSH Key
+#       #   run: |
+#       #     mkdir -p ~/.ssh   # Ensure .ssh directory exists
+#       #     echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+#       #     chmod 600 ~/.ssh/id_rsa
+
+
+#       - name: Install dependencies
+#         run: |
+#           pip install -r requirements.txt
+
+#       - name: Build Docker image
+#         run: |
+#           docker build -t streamlit-app .
+
+#       - name: Log in to Docker Hub
+#         run: |
+#           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+#       - name: Push Docker image to Docker Hub
+#         run: |
+#           docker tag streamlit-app:latest tanvij18/streamlit-app:latest
+#           docker push tanvij18/streamlit-app:latest
+
+#       - name: Set up SSH Key
+#         run: |
+#           mkdir -p ~/.ssh
+#           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+#           chmod 600 ~/.ssh/id_rsa
+
+#       - name: Add server to known hosts
+#         run: |
+#           ssh-keyscan -H 20.109.24.192 >> ~/.ssh/known_hosts
+#           echo "Host added to known_hosts"
+
+#       - name: Pull and run Docker container on server
+#         if: ${{ success() }}
+#         run: |
+#           echo "Attempting to pull and run Docker container..."
+#           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@20.109.24.192 "
+#             docker pull tanvij18/streamlit-app:latest &&
+#             docker stop streamlit-app || true &&
+#             docker rm streamlit-app || true &&
+#             docker run -d --name streamlit-app -p 8501:8501 tanvij18/streamlit-app:latest"
+
+#       # - name: Pull and run Docker container on server
+#       #   run: |
+#       #     echo "Attempting to pull and run Docker container..."
+#       #     ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@20.244.44.252 "
+#       #       docker pull tanvij18/streamlit-app:latest &&
+#       #       docker stop streamlit-app || true &&
+#       #       docker rm streamlit-app || true &&
+#       #       docker run -d --name streamlit-app -p 8501:8501 tanvij18/streamlit-app:latest"
 
 
