--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -22,13 +22,13 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: Install DVC
-        run: |
-          pip install dvc  # Install DVC
+      # - name: Install DVC
+      #   run: |
+      #     pip install dvc  # Install DVC
 
-      - name: Pull DVC files
-        run: |
-          dvc pull  # Pull data and model files from DVC remote storage
+      # - name: Pull DVC files
+      #   run: |
+      #     dvc pull  # Pull data and model files from DVC remote storage
 
       - name: Build Docker image
         run: |
